Fix footer alignement

--- a/themes/noteworthy/assets/css/main.scss
+++ b/themes/noteworthy/assets/css/main.scss
@@ -483,6 +483,7 @@ nav {
     .footer-mobile-links {
         display: flex;
         justify-content: center;
+        align-items: center;
     }
 
     .divider-bar {
